archive/kubernetes/firefly-ro/ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: firefly-ro
  annotations:
    external-dns.alpha.kubernetes.io/hostname: firefly-ro.home.es.
    external-dns.alpha.kubernetes.io/target: home.es.
spec:
  rules:
    - host: firefly-ro.home.es
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: firefly-ro
                port:
                  name: http
